--- a/css/style.css
+++ b/css/style.css
@@ -89,12 +89,13 @@ body {
     min-height: 100vh;
     display: flex;
     align-items: center;
-    background-image: url('../img/bg-home.png');
+    background-image: url('../img/bg/bg-1.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     position: relative;
 }
+
 
 .home::after {
     content: '';
@@ -123,11 +124,11 @@ body {
     color: var(--primary);
 }
 
-.home .content p {
+.home .content p {  
     font-size: 1.6rem;
     margin-top: 1rem;
     line-height: 1.4;
-    font-weight: 100;
+    font-weight: bold;
     text-shadow: 1px 1px 3px rgba(1, 1, 3, 0.5);
     mix-blend-mode: difference;
 }
